Migrated to Eclipse 2024-03 and reduced dependencies